@@ -1,5 +1,11 @@
 2001-07-17  Dave Peticolas  <dave@krondo.com>
 
+	* src/engine/io-gncbin-r.c: fix bug with price import (use
+	posted date, not entered date).
+
+	* src/engine/gnc-pricedb.[ch]: fix bugs with setting currency and
+	commodity and with converting from legacy commodities.
+
 	* src/engine/Transaction.c (xaccTransAppendSplit): make sure
 	split's value conforms to the transaction common currency.
 
